[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/level_textures/conc_forms01.png" type="Texture" id=1]
[ext_resource path="res://assets/level_textures/conc_forms01_n.png" type="Texture" id=2]
[ext_resource path="res://scripts/Door.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/item/door/door_open.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/item/door/door_move.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/item/door/door_opened.ogg" type="AudioStream" id=6]

[sub_resource type="SpatialMaterial" id=12]
albedo_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 2 )
uv1_scale = Vector3( 2.28, 2, 2 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 12 )
size = Vector3( 4, 10, 1 )

[sub_resource type="ConvexPolygonShape" id=14]
points = PoolVector3Array( -2, -5, -0.5, -2, -5, 0.5, -2, 5, -0.5, 2, -5, -0.5, 2, -5, 0.5, -2, 5, 0.5, 2, 5, -0.5, 2, 5, 0.5 )

[sub_resource type="ConvexPolygonShape" id=15]
points = PoolVector3Array( -2, -5, -0.5, -2, -5, 0.5, -2, 5, -0.5, 2, -5, -0.5, 2, -5, 0.5, -2, 5, 0.5, 2, 5, -0.5, 2, 5, 0.5 )

[sub_resource type="CapsuleShape" id=13]
radius = 3.8
height = 0.01

[node name="Door" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 4, -124 )
script = ExtResource( 3 )

[node name="DoorSide1" type="KinematicBody" parent="."]
collision_layer = 12
collision_mask = 0

[node name="mesh" type="MeshInstance" parent="DoorSide1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DoorSide1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
shape = SubResource( 14 )

[node name="DoorSide2" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
collision_layer = 12
collision_mask = 0

[node name="mesh" type="MeshInstance" parent="DoorSide2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="DoorSide2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
shape = SubResource( 15 )

[node name="TriggerOpen" type="Area" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="TriggerOpen"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.77447, 0 )
shape = SubResource( 13 )

[node name="DoorMove" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 20.0
unit_size = 10.0
max_distance = 100.0
bus = "maze_reverb"

[node name="DoorOpen" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 60.0
unit_size = 40.0
max_distance = 100.0

[node name="DoorOpened" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 65.0
unit_size = 35.0
max_db = 6.0
pitch_scale = 0.8
max_distance = 100.0
bus = "maze_reverb"
attenuation_filter_cutoff_hz = 20500.0
